// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't cut off text before first style or after last style 1`] = `
<View>
  <Text
    style={
      Array [
        Object {},
        undefined,
      ]
    }
  >
    <Text>
      "Lorem ipsum dolor sit 
    </Text>
    <Text
      style={
        Array [
          Array [
            Object {
              "textDecorationLine": "underline",
            },
          ],
        ]
      }
    >
      amet
    </Text>
    <Text
      style={
        Array [
          Array [],
        ]
      }
    >
      , consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
    </Text>
    <Text
      style={
        Array [
          Array [
            Object {
              "fontStyle": "italic",
            },
          ],
        ]
      }
    >
      exercitation
    </Text>
    <Text>
       ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
    </Text>
  </Text>
</View>
`;

exports[`renders header blocks and inline styles correctly 1`] = `
Array [
  <View>
    <Text
      style={
        Array [
          Object {},
          Object {
            "textAlign": "center",
          },
        ]
      }
    >
      Centered header
    </Text>
  </View>,
  <View>
    <Text
      style={
        Array [
          Object {},
          Object {
            "textAlign": "right",
          },
        ]
      }
    >
      Right header
    </Text>
  </View>,
  <View>
    <Text
      style={
        Array [
          Object {},
          Object {
            "textAlign": "justify",
          },
        ]
      }
    >
      Justified header
    </Text>
  </View>,
  <View>
    <Text
      style={
        Array [
          Object {},
          Object {
            "textAlign": "left",
          },
        ]
      }
    >
      Left header
    </Text>
  </View>,
  <View>
    <Text
      style={
        Array [
          Object {},
          undefined,
        ]
      }
    >
      
    </Text>
  </View>,
  <View>
    <Text
      style={
        Array [
          Object {},
          undefined,
        ]
      }
    >
      <Text
        style={
          Array [
            Array [
              Object {
                "fontWeight": "bold",
              },
            ],
          ]
        }
      >
        Bold
      </Text>
      <Text
        style={
          Array [
            Array [],
          ]
        }
      >
         
      </Text>
      <Text
        style={
          Array [
            Array [
              Object {
                "fontStyle": "italic",
              },
            ],
          ]
        }
      >
        italic
      </Text>
      <Text
        style={
          Array [
            Array [],
          ]
        }
      >
         
      </Text>
      <Text
        style={
          Array [
            Array [
              Object {
                "textDecorationLine": "line-through",
              },
            ],
          ]
        }
      >
        strikethrough
      </Text>
      <Text
        style={
          Array [
            Array [],
          ]
        }
      >
         
      </Text>
      <Text
        style={
          Array [
            Array [
              Object {
                "textDecorationLine": "underline",
              },
            ],
          ]
        }
      >
        underline
      </Text>
      <Text
        style={
          Array [
            Array [],
          ]
        }
      >
         
      </Text>
      <Text
        style={
          Array [
            Array [
              Object {
                "fontWeight": "bold",
              },
              Object {
                "fontStyle": "italic",
              },
              Object {
                "textDecorationLine": "line-through",
              },
              Object {
                "textDecorationLine": "underline",
              },
            ],
          ]
        }
      >
        all
      </Text>
    </Text>
  </View>,
]
`;
